# AtomLoRA

./: .gitignore  Ai文档.md  README.md  check_tokens.py  down.py  evaluator.py  install.bat  install.sh  main.py  predict.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
api/: app.py  model_manager.py  security.py  settings.py  util.py
atomlora/: cli.py  engine.py
configs/: bert_text_audit_multi.yaml  bert_text_audit_single.yaml  demo.yaml  ernie_text_audit_multi.yaml  ernie_text_audit_single.yaml  exp_v4_double_label.yaml  experiment_index.json  text_audit.yaml  text_audit_one.yaml
configs/templates/: bert_lora_template.yaml  ernie_lora_template.yaml
docs/: config_v1.md
src/config/: index_manager.py  parser.py
src/data/: cache_manager.py  data_processor.py  doctor.py  io.py  splitter.py
src/eval/: runner.py
src/model/: lora_adapter.py  model_factory.py  text_dataset.py
src/predict/: predictor.py
src/scheduler/: gpu_scheduler.py
src/trainer/: metric_manager.py  train_engine.py
src/utils/: compare_tool.py  device.py  logger.py  paths.py
tests/: test_api.py  test_cli.py  test_config_parser.py  test_doctor.py  test_predictor.py  test_security.py  test_splitter.py  test_trainer.py
tests/fixtures/: demo.yaml  raw.jsonl
